@@ -167,6 +167,9 @@ Working version
   (Alexander Skvortsov, report by Török Edwin,
    design by Gabriel Scherer, Xavier Leroy)
 
+- #12032, #12059: Bug fixes related to compilation of recursive definitions
+  (Vincent Laviron, report by Louis Noizet, review by Gabriel Scherer)
+
 * #12145: Loopy constraints cause ocamlc to loop.
   Fixed by completely removing the call to `update_type` in
   `Typedecl.transl_type_decl`, as the expansion is already checked by
